SGRS gramma + wordsMenu part 2

--- a/Projekt_FB/Projekt_FB.csproj
+++ b/Projekt_FB/Projekt_FB.csproj
@@ -48,4 +48,10 @@
     <Resource Include="sztaluga.jpg" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="pl-PL.grxml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
