--- a/Projekt_FB/Projekt_FB.csproj
+++ b/Projekt_FB/Projekt_FB.csproj
@@ -11,13 +11,30 @@
   <ItemGroup>
     <None Remove="405614-most-popular-kids-background-2799x1429-for-android.jpg" />
     <None Remove="bajki.png" />
+    <None Remove="calcicon.jpg" />
+    <None Remove="divide.jpg" />
+    <None Remove="divide.png" />
     <None Remove="exit_icon.png" />
     <None Remove="forestCar.jpg" />
     <None Remove="mickeyMouseHouse.png" />
+    <None Remove="microphone.jfif" />
+    <None Remove="minus.jpg" />
+    <None Remove="number0.png" />
+    <None Remove="number1.png" />
+    <None Remove="number2.png" />
+    <None Remove="number3.png" />
+    <None Remove="number4.png" />
+    <None Remove="number5.png" />
+    <None Remove="number6.png" />
+    <None Remove="number7.png" />
+    <None Remove="number8.png" />
+    <None Remove="number9.png" />
     <None Remove="playButton.jpg" />
+    <None Remove="plusicon.png" />
     <None Remove="slowabackground.jpg" />
     <None Remove="spelling.jpg" />
     <None Remove="sztaluga.jpg" />
+    <None Remove="times.jpg" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,15 +58,34 @@
   <ItemGroup>
     <Resource Include="405614-most-popular-kids-background-2799x1429-for-android.jpg" />
     <Resource Include="bajki.png" />
+    <Resource Include="calcicon.jpg" />
+    <Resource Include="divide.jpg" />
+    <Resource Include="divide.png" />
     <Resource Include="exit_icon.png" />
     <Resource Include="forestCar.jpg" />
     <Resource Include="mickeyMouseHouse.png" />
+    <Resource Include="microphone.jfif" />
+    <Resource Include="minus.jpg" />
+    <Resource Include="number0.png" />
+    <Resource Include="number1.png" />
+    <Resource Include="number2.png" />
+    <Resource Include="number3.png" />
+    <Resource Include="number4.png" />
+    <Resource Include="number5.png" />
+    <Resource Include="number6.png" />
+    <Resource Include="number7.png" />
+    <Resource Include="number8.png" />
+    <Resource Include="number9.png" />
     <Resource Include="playButton.jpg" />
+    <Resource Include="plusicon.png" />
     <Resource Include="slowabackground.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="spelling.jpg" />
     <Resource Include="sztaluga.jpg" />
+    <Resource Include="times.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
