new features - fixed slider, added db gramma generator

--- a/Projekt_FB/Projekt_FB.csproj
+++ b/Projekt_FB/Projekt_FB.csproj
@@ -50,6 +50,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Npgsql" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Microsoft.Speech">
       <HintPath>Microsoft.Speech.dll</HintPath>
     </Reference>
@@ -90,6 +94,9 @@
 
   <ItemGroup>
     <None Update="pl-PL.grxml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="test.grxml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
