--- a/Projekt_FB/Projekt_FB.csproj
+++ b/Projekt_FB/Projekt_FB.csproj
@@ -93,6 +93,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="kalkulator.grxml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="menuGrammar.grxml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="pl-PL.grxml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
